--- a/views/salon_order_view.xml
+++ b/views/salon_order_view.xml
@@ -1,6 +1,35 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <data>
+      <act_window name="Notify by Sms"
+          res_model="salon.order"
+          src_model="salon.order"
+          multi="True"
+          key2="client_action_multi"
+          id="archive_applicant"
+
+      />
+        <record id="view_oeh_salon_order_filter" model="ir.ui.view">
+          <field name="name">salon order Search</field>
+          <field name="model">salon.order</field>
+          <field name="type">search</field>
+          <field name="arch" type="xml">
+              <search string="Search Order">
+                  <separator orientation="vertical"/>
+                      <field name="customer_name" string="Customer Name" select="1"/>
+                      <field name="customer_number" string="Phone Number" select="1"/>
+                      <field name="chair_id" string="Artist"/>
+                  <newline/>
+                  <group expand="0" string="Group By..." colspan="11" col="11">
+                      <filter string="Artist" context="{'group_by':'chair_id'}"/>
+                      <filter string="date" context="{'group_by':'date'}"/>
+                      <filter string="Today"
+                        domain="[('start_time','&gt;=', datetime.datetime.combine(context_today(), datetime.time(0,0,0))), ('start_time','&lt;=', datetime.datetime.combine(context_today(), datetime.time(23,59,59)))]"/>
+
+                  </group>
+              </search>
+          </field>
+      </record>
         <record id="partner_salon_boolean" model="ir.ui.view">
           <field name="name">partner_salon_boolean.view</field>
           <field name="model">res.partner</field>
@@ -31,7 +60,7 @@
                     <field name="end_time"/>
                     <field name="time_taken_total" widget="float_time"/>
                     <field name="price_subtotal"/>
-                    <field name="stage_id"/>
+                    <field name="state"/>
                 </tree>
             </field>
         </record>
@@ -39,7 +68,7 @@
             <field name="name">salon_order_kanban.kanban</field>
             <field name="model">salon.order</field>
             <field name="arch" type="xml">
-                <kanban default_group_by="stage_id" class="o_kanban_small_column" quick_create="false">
+                <kanban default_group_by="state" class="o_kanban_small_column" quick_create="false">
                     <field name="color"/>
                         <templates>
                             <t t-name="kanban-box">
@@ -64,7 +93,7 @@
                                             <a>Customer :</a>
                                             <field name="customer_name"/>
                                             <div style="float: right;">
-                                                <a>Chair :</a>
+                                                <a>A :</a>
                                                 <field name="chair_id"/>
                                             </div>
                                         </div>
@@ -94,15 +123,13 @@
             <field name="arch" type="xml">
                 <form>
                     <header>
-                        <button name="salon_validate" attrs="{'invisible': ['|',('stage_id', '!=', 1), ('validation_controller', '=', True)]}" string="Validate" type="object"
+                        <button name="salon_confirm" attrs="{'invisible': [('state', 'in', ('scheduled','closed','cancelled'))]}" string="Confirm" type="object"
                                 class="oe_highlight"/>
-                        <button name="salon_confirm" attrs="{'invisible': ['|',('stage_id', '!=', 1), ('validation_controller', '!=', True)]}" string="Confirm" type="object"
-                                class="oe_highlight"/>
-                        <button name="salon_invoice_create" attrs="{'invisible': [('stage_id', '!=', 2)]}" string="Create Invoice"
+                        <button name="salon_invoice_create" attrs="{'invisible': [('invoiced', '=', True)]}" string="Create Invoice"
                                 type="object" class="oe_highlight"/>
-                        <button name="salon_cancel" string="Cancel" attrs="{'invisible': [('stage_id', 'not in', [1,2])]}" type="object"/>
-                        <button name="salon_close" attrs="{'invisible': [('stage_id', '!=', 3)]}" string="Close" type="object"/>
-                        <field name="stage_id" widget="statusbar" domain="[('id','in',[1,2,4])]"/>
+                        <button name="salon_cancel" string="Cancel" attrs="{'invisible': [('state', 'in', ('cancelled','closed'))]}" type="object"/>
+                        <button name="salon_close" attrs="{'invisible': [('state', 'in', ('cancelled','closed','draft'))]}" string="Close" type="object"/>
+                        <field name="state" widget="statusbar"/>
                     </header>
                     <sheet>
                         <div class="oe_button_box" name="button_box">
@@ -110,22 +137,24 @@
                                     type="object"
                                     class="oe_stat_button"
                                     icon="fa-pencil-square-o"
-                                    attrs="{'invisible': [('stage_id', 'not in', [3,4])]}"
+                                    attrs="{'invisible': [('invoiced', '=', False)]}"
                                     string="Invoice">
                             </button>
                         </div>
                         <group>
                             <group>
-                                <field name="partner_id" domain="[('partner_salon','=',True)]" attrs="{'readonly': [('stage_id', '!=', 1)]}"/>
-                                <field name="customer_name" attrs="{'readonly': [('stage_id', '!=', 1)]}"/>
-                                <field name="customer_number" attrs="{'readonly': [('stage_id', '!=', 1)]}"/>
-                                <field name="chair_id" domain="[('active_booking_chairs','!=',True)]" attrs="{'readonly': [('stage_id', '!=', 1)]}"/>
+                                <field name="partner_id" domain="[('partner_salon','=',True)]" attrs="{'readonly': [('state', 'in', ('cancelled','closed'))]}"/>
+                                <field name="customer_name" attrs="{'readonly': [('state', 'in', ('cancelled','closed'))]}"/>
+                                <field name="customer_number" attrs="{'readonly': [('state', 'in', ('cancelled','closed'))]}"/>
+                                <field name="chair_id" domain="[('active_booking_chairs','!=',True)]" attrs="{'readonly': [('state', 'in', ('cancelled','closed'))]}"/>
                             </group>
                             <group>
                                 <field name="booking_identifier" invisible="1"/>
-                                <field name="date" attrs="{'readonly': [('stage_id', '!=', 1)]}"/>
-                                <field name="start_time" attrs="{'readonly': [('stage_id', '!=', 1)], 'invisible': ['|',('stage_id', '!=', 1), ('booking_identifier', '!=', True)]}"/>
-                                <field name="end_time" attrs="{'readonly': [('stage_id', '!=', 1)], 'invisible': ['|',('stage_id', '!=', 1), ('booking_identifier', '!=', True)]}"/>
+                                <field name="invoiced" invisible="1"/>
+                                <field name="date" attrs="{'readonly': [('state', 'in', ('cancelled','closed'))]}" invisible="1"/>
+                                <field name="start_time" attrs="{'readonly': [('state', 'in', ('cancelled','closed'))]}"/>
+
+                                <field name="end_time" invisible="1"/>
                                 <field name="start_date_only" invisible="1"/>
                                 <field name="inv_stage_identifier" invisible="1"/>
                                 <field name="invoice_number" invisible="1"/>
@@ -135,7 +164,7 @@
                         </group>
                         <notebook>
                             <page string="Order Lines">
-                                <field name="order_line" mode="tree,kanban" attrs="{'readonly': [('stage_id', '!=', 1)]}">
+                                <field name="order_line" mode="tree,kanban" attrs="{'readonly': [('state', 'in', ('cancelled','closed'))]}">
                                     <form string="Salon Order Lines">
                                         <group>
                                             <group>
