--- a/views/salon_data.xml
+++ b/views/salon_data.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+
 <odoo>
   <data>
     <record id="salon_stages_form" model="ir.ui.view">
@@ -43,6 +43,8 @@
       <field name="name">Salon Service</field>
       <field name="partner_salon">1</field>
       <field name="type">service</field>
+      <field name="sale_line_warn">no-message</field>
+      <field name="purchase_line_warn">no-message</field>
     </record>
 
   </data>
