--- a/views/salon_management_chair.xml
+++ b/views/salon_management_chair.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+
 <odoo>
     <data noupdate="1">
         <record id="sequence_chair" model="ir.sequence">
@@ -9,19 +9,6 @@
             <field name="number_increment">1</field>
             <field name="padding">1</field>
         </record>
-    </data>
-    <data>
-        <record forcecreate="True" id="ir_cron_collections_today" model="ir.cron">
-            <field name="name">Collection Today</field>
-            <field eval="True" name="active" />
-            <field name="user_id" ref="base.user_root" />
-            <field name="interval_number">1</field>
-            <field name="interval_type">days</field>
-            <field name="numbercall">-1</field>
-            <field eval="False" name="doall" />
-            <field eval="'salon.chair'" name="model" />
-            <field eval="'collection_today_updater'" name="function" />
-        </record>
         <record id="salon_chair_form" model="ir.ui.view">
             <field name="name">salon_chair_form.form</field>
             <field name="model">salon.chair</field>
@@ -29,7 +16,7 @@
                 <form>
                     <sheet>
                         <h1>
-                            <field name="name"/>
+                            <field name="name" placeholder="Artist name"/>
                         </h1>
                         <group>
                             <group>
@@ -83,7 +70,7 @@
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
         </record>
-        <menuitem id="salon_management_menu" name="Appointments"/>
+        <menuitem id="salon_management_menu" name="Appointments" web_icon="salon_management,static/description/menu_icon.png"/>
         <menuitem id="salon_management_dashboard" parent="salon_management_menu" action="salon_dashboard_action"/>
         <menuitem id="salon_management_salon" name="Salon" parent="salon_management_menu"/>
         <menuitem id="salon_management_chair" name="Artists" parent="salon_management_salon" action="salon_chair_action"/>
